# Parser

./: CMakeLists.txt  README.md  main.cpp
include/: FiniteAutomation.hpp  RegularExpression.hpp
src/: FiniteAutomation.cpp  RegularExpression.cpp
test/: RegexTests.cpp
